# drone_sim_mavlink

./: .clang-format  .clang-format.yaml  .gitignore  CMakeLists.txt  Dockerfile  compose-demo.yaml  compose.yaml  main.cpp  readme.md
analyzer/: analyzer.cpp  analyzer.h
apps/: main.cpp  telemetry_main.cpp  video_main.cpp
config/: message_types_subcat_id.json
decoder/: decoder.cpp  decoder.h
message_definition/: message_definition.cpp  message_definition.h
parser/: parser.cpp  parser.h
replay/: replay.cpp  replay.h
report/: report.cpp  report.h
src/telemetry/analyzer/: analyzer.cpp  analyzer.h
src/telemetry/connector/: file.cpp  file.h  telemetry.h  udp.cpp  udp.h
src/telemetry/decoder/: decoder.cpp  decoder.h
src/telemetry/message_definition/: message_definition.cpp  message_definition.h
src/telemetry/parser/: parser.cpp  parser.h
src/telemetry/replay/: replay.cpp  replay.h
src/telemetry/report/: report.cpp  report.h
src/video/connector/: rtsp.cpp  rtsp.h
src/video/processor/: frame_overlay.cpp  frame_overlay.h
src/video/render/: render.cpp  render.h
support/: tlog2udp.py  video2rtsp.sh  webcam2rtsp.sh
